Added DW3DOS ROMs

--- a/cocoroms/makefile
+++ b/cocoroms/makefile
@@ -1,10 +1,4 @@
-HDBSCSI	= hdbtc3.rom hdbkenton.rom hdblrtech.rom hdbd4n1.rom hdbdhdii.rom
-HDBIDE  = hdblba.rom hdbchs.rom
-HDBDW   = hdbdw3cc2.rom hdbdw3cc3.rom hdbdw4cc3.rom
-HDB     = $(HDBSCSI) $(HDBIDE) $(HDBDW)
-
-all: bas13.rom extbas11.rom disk11.rom coco3.rom \
-	$(HDB)
+all: bas13.rom extbas11.rom disk11.rom coco3.rom
 
 bas13.rom: equates.asm bas.asm
 	mamou -q -mr equates.asm bas.asm -o$@
@@ -24,36 +18,6 @@ disk11.rom: ecb_equates.asm disk.asm
 coco3.rom: equates.asm coco3.asm
 	mamou -q -mr equates.asm coco3.asm -o$@
    
-hdbtc3.rom: ecb_equates.asm hdbdos.asm
-	mamou -aSCSI -aTC3 -q -mr ecb_equates.asm hdbdos.asm -o$@
-
-hdbkenton.rom: ecb_equates.asm hdbdos.asm
-	mamou -aSCSI -aKENTON -q -mr ecb_equates.asm hdbdos.asm -o$@
-
-hdblrtech.rom: ecb_equates.asm hdbdos.asm
-	mamou -aSCSI -aLRTECH -q -mr ecb_equates.asm hdbdos.asm -o$@
-
-hdbd4n1.rom: ecb_equates.asm hdbdos.asm
-	mamou -aSCSI -aD4N1 -q -mr ecb_equates.asm hdbdos.asm -o$@
-
-hdbdhdii.rom: ecb_equates.asm hdbdos.asm
-	mamou -aSCSI -aDHDII -q -mr ecb_equates.asm hdbdos.asm -o$@
-
-hdblba.rom: ecb_equates.asm hdbdos.asm
-	mamou -aIDE -aUSELBA -q -mr ecb_equates.asm hdbdos.asm -o$@
-
-hdbchs.rom: ecb_equates.asm hdbdos.asm
-	mamou -aIDE -aUSECHS -q -mr ecb_equates.asm hdbdos.asm -o$@
-
-hdbdw3cc2.rom: ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=1 -q -mr ecb_equates.asm hdbdos.asm -o$@
-
-hdbdw3cc3.rom: ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=2 -q -mr ecb_equates.asm hdbdos.asm -o$@
-
-hdbdw4cc3.rom: ecb_equates.asm hdbdos.asm
-	mamou -aDW -aDW4 -aLevel=2 -q -mr ecb_equates.asm hdbdos.asm -o$@
-
 clean:
-	-rm -f bas13.rom cb_equates.asm ecb_equates.asm extbas11.rom disk11.rom coco3.rom \
-	$(HDB)
+	-rm -f bas13.rom cb_equates.asm ecb_equates.asm extbas11.rom disk11.rom coco3.rom
+	
