Updated HDBDOS makefile so that the assembler is now a variable rather than a fixed executable.
Edited HDBDOS makefile so that a variable called "AS" is now set
to the assembler to be used.  Then all sections were updated so
they use $(AS) inplace of "mamou".

This should allow for easier change out of the assembler in the
future as well as any special assembler options.

--- a/hdbdos/makefile
+++ b/hdbdos/makefile
@@ -17,17 +17,19 @@ HDBCAS  = hdbtc3.wav hdbkenton.wav hdblrtech.wav hdbd4n1.wav hdbdhdii.wav \
 
 ALLOBJS         = preload postload $(HDBROM) $(HDBBIN) $(HDBCAS)
 
+AS	= mamou 
+
 all: $(ALLOBJS)
 
 preload: preload.asm
-	mamou -q $< -mr -opreload
+	$(AS) -q $< -mr -opreload
 
 postload: postload.asm
-	mamou -q $< -mr -opostload
+	$(AS) -q $< -mr -opostload
 
 # TC^3 SCSI
 hdbtc3.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aSCSI -aTC3 -q -mr $+ -o$@
+	$(AS) -aSCSI -aTC3 -q -mr $+ -o$@
 
 hdbtc3.bin: preload hdbtc3.rom postload 
 	cat $+ > $@
@@ -39,7 +41,7 @@ hdbtc3.wav: hdbtc3.bin
 
 # Ken-Ton SCSI
 hdbkenton.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aSCSI -aKENTON -q -mr $+ -o$@
+	$(AS) -aSCSI -aKENTON -q -mr $+ -o$@
 
 hdbkenton.bin: preload hdbkenton.rom postload 
 	cat $+ > $@
@@ -51,7 +53,7 @@ hdbkenton.wav: hdbkenton.bin
 
 # LRTech SCSI
 hdblrtech.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aSCSI -aLRTECH -q -mr $+ -o$@
+	$(AS) -aSCSI -aLRTECH -q -mr $+ -o$@
 
 hdblrtech.bin: preload hdblrtech.rom postload 
 	cat $+ > $@
@@ -63,7 +65,7 @@ hdblrtech.wav: hdblrtech.bin
 
 # Disto 4-N-1 SCSI
 hdbd4n1.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aSCSI -aD4N1 -q -mr $+ -o$@
+	$(AS) -aSCSI -aD4N1 -q -mr $+ -o$@
 
 hdbd4n1.bin: preload hdbd4n1.rom postload 
 	cat $+ > $@
@@ -75,7 +77,7 @@ hdbd4n1.wav: hdbd4n1.bin
 
 # Disto HD-II
 hdbdhdii.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aSCSI -aDHDII -q -mr $+ -o$@
+	$(AS) -aSCSI -aDHDII -q -mr $+ -o$@
 
 hdbdhdii.bin: preload hdbdhdii.rom postload 
 	cat $+ > $@
@@ -87,7 +89,7 @@ hdbdhdii.wav: hdbdhdii.bin
 
 # IDE LBA
 hdblba.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aIDE -aUSELBA -q -mr $+ -o$@
+	$(AS) -aIDE -aUSELBA -q -mr $+ -o$@
 
 hdblba.bin: preload hdblba.rom postload 
 	cat $+ > $@
@@ -99,7 +101,7 @@ hdblba.wav: hdblba.bin
 
 # IDE CHS
 hdbchs.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aIDE -aUSECHS -q -mr $+ -o$@
+	$(AS) -aIDE -aUSECHS -q -mr $+ -o$@
 
 hdbchs.bin: preload hdbchs.rom postload 
 	cat $+ > $@
@@ -111,7 +113,7 @@ hdbchs.wav: hdbchs.bin
 
 # DW4 CoCo 3
 hdbdw4cc3.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=2 -aDW4 -q -mr $+ -o$@
+	$(AS) -aDW -aLevel=2 -aDW4 -q -mr $+ -o$@
 
 hdbdw4cc3.bin: preload hdbdw4cc3.rom postload 
 	cat $+ > $@
@@ -123,7 +125,7 @@ hdbdw4cc3.wav: hdbdw4cc3.bin
 
 # DW4 CoCo 2
 hdbdw4cc2.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=1 -aDW4 -q -mr $+ -o$@
+	$(AS) -aDW -aLevel=1 -aDW4 -q -mr $+ -o$@
 
 hdbdw4cc2.bin: preload hdbdw4cc2.rom postload 
 	cat $+ > $@
@@ -135,7 +137,7 @@ hdbdw4cc2.wav: hdbdw4cc2.bin
 
 # DW3 CoCo 1
 hdbdw3cc1.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=1 -aBAUD38400 -q -mr $+ -o$@
+	$(AS) -aDW -aLevel=1 -aBAUD38400 -q -mr $+ -o$@
 
 hdbdw3cc1.bin: preload hdbdw3cc1.rom postload 
 	cat $+ > $@
@@ -147,7 +149,7 @@ hdbdw3cc1.wav: hdbdw3cc1.bin
 
 # DW3 CoCo 2
 hdbdw3cc2.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=1 -q -mr $+ -o$@
+	$(AS) -aDW -aLevel=1 -q -mr $+ -o$@
 
 hdbdw3cc2.bin: preload hdbdw3cc2.rom postload 
 	cat $+ > $@
@@ -159,7 +161,7 @@ hdbdw3cc2.wav: hdbdw3cc2.bin
 
 # DW3 CoCo 3
 hdbdw3cc3.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=2 -q -mr $+ -o$@
+	$(AS) -aDW -aLevel=2 -q -mr $+ -o$@
 
 hdbdw3cc3.bin: preload hdbdw3cc3.rom postload 
 	cat $+ > $@
@@ -171,7 +173,7 @@ hdbdw3cc3.wav: hdbdw3cc3.bin
 
 # DW3 CoCo Becker
 hdbdw3bck.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=1 -aBECKER -q -mr $+ -o$@
+	$(AS) -aDW -aLevel=1 -aBECKER -q -mr $+ -o$@
 
 hdbdw3bck.bin: preload hdbdw3bck.rom postload 
 	cat $+ > $@
@@ -183,7 +185,7 @@ hdbdw3bck.wav: hdbdw3bck.bin
 
 # DW3 CoCo 3 Becker
 hdbdw3bc3.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=2 -aBECKER -q -mr $+ -o$@
+	$(AS) -aDW -aLevel=2 -aBECKER -q -mr $+ -o$@
 
 hdbdw3bc3.bin: preload hdbdw3bc3.rom postload 
 	cat $+ > $@
@@ -195,7 +197,7 @@ hdbdw3bc3.wav: hdbdw3bc3.bin
 
 # DW3 CoCo 3 J&M CP FDC Becker
 hdbdw3jc3.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=2 -aJMCPBCK -q -mr $+ -o$@
+	$(AS) -aDW -aLevel=2 -aJMCPBCK -q -mr $+ -o$@
 
 hdbdw3jc3.bin: preload hdbdw3jc3.rom postload 
 	cat $+ > $@
@@ -207,7 +209,7 @@ hdbdw3jc3.wav: hdbdw3jc3.bin
 
 # DW3 CoCo J&M CP FDC Becker
 hdbdw3jc2.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=1 -aJMCPBCK -q -mr $+ -o$@
+	$(AS) -aDW -aLevel=1 -aJMCPBCK -q -mr $+ -o$@
 
 hdbdw3jc2.bin: preload hdbdw3jc2.rom postload 
 	cat $+ > $@
@@ -219,7 +221,7 @@ hdbdw3jc2.wav: hdbdw3jc2.bin
 
 # DW3 Arduino (Boisy)
 hdbdw3arduino.rom: ../cocoroms/ecb_equates.asm hdbdos.asm
-	mamou -aDW -aLevel=1 -aARDUINO -q -mr $+ -o$@
+	$(AS) -aDW -aLevel=1 -aARDUINO -q -mr $+ -o$@
 
 hdbdw3arduino.bin: preload hdbdw3arduino.rom postload 
 	cat $+ > $@
