--- a/dwdos/Makefile
+++ b/dwdos/Makefile
@@ -5,6 +5,7 @@ DEPENDS		= ./Makefile
 AS		= lwasm -r --pragma=condundefzero
 ASOUT		= -o
 ECHO		= echo
+MAKEWAV		= makewav -r -c
 
 ROMS		= dw3dos_mb_cc3.rom dw3dos_mb_cc2.rom dw3dos_mb_cc1.rom \
 		dw3dos_dsk_cc3.rom dw3dos_dsk_cc2.rom dw3dos_dsk_cc1.rom \
@@ -61,13 +62,13 @@ dw3doscc1.bin:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=1 -DBIN=1 -b
 
 dw3doscc3.wav:	dw3doscc3.bin
-	makewav $< -r -d0x2400 -e0x2400 -o$@ -nDW3DOSC3
+	$(MAKEWAV) -o$@ -nDW3DOSC3 $<
 
 dw3doscc2.wav:	dw3doscc2.bin
-	makewav $< -r -d0x2400 -e0x2400 -o$@ -nDW3DOSC2
+	$(MAKEWAV) -o$@ -nDW3DOSC2 $<
 
 dw3doscc1.wav:	dw3doscc1.bin
-	makewav $< -r -d0x2400 -e0x2400 -o$@ -nDW3DOSC1
+	$(MAKEWAV) -o$@ -nDW3DOSC1 $<
 
 # DW4DOS ROMs
 dw4dos_mb_cc3.rom:	dw3dos.asm
@@ -89,10 +90,10 @@ dw4doscc2.bin:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBIN=1 -b -DDW4=1
 
 dw4doscc3.wav:	dw3doscc3.bin
-	makewav $< -r -d0x2400 -e0x2400 -o$@ -nDW3DOSC3
+	$(MAKEWAV) -o$@ -nDW3DOSC3 $<
 
 dw4doscc2.wav:	dw3doscc2.bin
-	makewav $< -r -d0x2400 -e0x2400 -o$@ -nDW3DOSC2
+	$(MAKEWAV) -o$@ -nDW3DOSC2 $<
 
 # DW3DOS Tracks
 dw3dos_cc3.trk:	dw3dos.asm
