Makefiles: Consistent name and permissions
Makefiles need not be executable, they are rules files.

Also remove obsolete os9/Makefile.

--- a/dwdos/Makefile
+++ b/dwdos/Makefile
@@ -1,6 +1,6 @@
 include $(NITROS9DIR)/rules.mak
 
-DEPENDS		= ./makefile
+DEPENDS		= ./Makefile
 BF68L1		= $(LEVEL1)/coco/bootfiles
 MD68L1		= $(LEVEL1)/coco/modules
 BF68L2		= $(LEVEL2)/coco3/bootfiles
