--- a/dwdos/Makefile
+++ b/dwdos/Makefile
@@ -1,7 +1,8 @@
 
 DEPENDS		= ./Makefile
 
-AS		= mamou -r -q
+#AS		= mamou -r -q
+AS		= lwasm -r --pragma=condundefzero
 ASOUT		= -o
 ECHO		= echo
 
@@ -33,31 +34,31 @@ dsk:	objs
 
 # DW3DOS ROMs
 dw3dos_mb_cc3.rom:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=3
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3
 
 dw3dos_mb_cc2.rom:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=2
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2
 
 dw3dos_mb_cc1.rom:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=1
 
 dw3dos_dsk_cc3.rom:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=3 -aDISKROM=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DDISKROM=1
 
 dw3dos_dsk_cc2.rom:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=2 -aDISKROM=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDISKROM=1
 
 dw3dos_dsk_cc1.rom:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=1 -aDISKROM=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=1 -DDISKROM=1
 
 dw3doscc3.bin:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=3 -aBIN=1 -mb
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DBIN=1 -b
 
 dw3doscc2.bin:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=2 -aBIN=1 -mb
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBIN=1 -b
 
 dw3doscc1.bin:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=1 -aBIN=1 -mb
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=1 -DBIN=1 -b
 
 dw3doscc3.wav:	dw3doscc3.bin
 	makewav $< -r -d0x2400 -e0x2400 -o$@ -nDW3DOSC3
@@ -70,22 +71,22 @@ dw3doscc1.wav:	dw3doscc1.bin
 
 # DW4DOS ROMs
 dw4dos_mb_cc3.rom:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=3 -aDW4=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DDW4=1
 
 dw4dos_mb_cc2.rom:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=2 -aDW4=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDW4=1
 
 dw4dos_dsk_cc3.rom:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=3 -aDISKROM=1 -aDW4=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DDISKROM=1 -DDW4=1
 
 dw4dos_dsk_cc2.rom:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=2 -aDISKROM=1 -aDW4=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDISKROM=1 -DDW4=1
 
 dw4doscc3.bin:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=3 -aBIN=1 -mb -aDW4=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DBIN=1 -b -DDW4=1
 
 dw4doscc2.bin:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=2 -aBIN=1 -mb -aDW4=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBIN=1 -b -DDW4=1
 
 dw4doscc3.wav:	dw3doscc3.bin
 	makewav $< -r -d0x2400 -e0x2400 -o$@ -nDW3DOSC3
@@ -95,20 +96,20 @@ dw4doscc2.wav:	dw3doscc2.bin
 
 # DW3DOS Tracks
 dw3dos_cc3.trk:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=3 -aDOSTRACK
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DDOSTRACK
 
 dw3dos_cc2.trk:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=2 -aDOSTRACK
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDOSTRACK
 
 dw3dos_cc1.trk:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=1 -aDOSTRACK
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=1 -DDOSTRACK
 
 # DW4DOS Tracks
 dw4dos_cc3.trk:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=3 -aDOSTRACK -aDW4=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DDOSTRACK -DDW4=1
 
 dw4dos_cc2.trk:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -aCoCo=2 -aDOSTRACK -aDW4=1
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDOSTRACK -DDW4=1
 
 drivewire.zip: $(ALLOBJS)
 	zip $@ $(ALLOBJS)
