hdbdos: Disable the index0tonone optimalization on lwasm
lsasm would optimize "lda 0,x" -> "lda ,x" by default

Disabling this we truely get identical binaries as with mamou.

--- a/hdbdos/Makefile
+++ b/hdbdos/Makefile
@@ -19,7 +19,7 @@ HDBCAS  = hdbtc3.wav hdbkenton.wav hdblrtech.wav hdbd4n1.wav hdbdhdii.wav \
 ALLOBJS         = preload postload $(HDBROM) $(HDBBIN) $(HDBCAS)
 
 #AS		= mamou -r -q
-AS		= lwasm -r --pragma=condundefzero,nodollarlocal
+AS		= lwasm -r --pragma=condundefzero,nodollarlocal,noindex0tonone
 MERGE		= cat
 MAKEWAV		= makewav -r -c
 CECB		= cecb
