Moving things around

--- a/c3/shirsch/cprep19/Makefile
+++ b/c3/shirsch/cprep19/Makefile
@@ -1,6 +1,6 @@
 RELS = cp.o cp1.o cp2.o cp3.o cp4.o solve.o
 
-CFLAGS = -m32 -g -I.
+CFLAGS = -m32 -g -I. -DXTARGET
 
 coprep: $(RELS)
 	gcc -m32 $(RELS) -o $@
@@ -9,3 +9,6 @@ $(RELS): cp.h
 
 clean:
 	rm -f $(RELS) coprep
+
+install: coprep
+	install coprep /usr/local/bin
